--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- ========================= FOOTER ========================= -->
-<footer class="section-footer border-top">
+<footer class="section-footer border-top mt-auto fixed-bottom ">
 	<div class="container-fluid bg-dark text-white">
 		<section class="footer-bottom border-top row">
 			<div class="col-md-2">
