--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -28,8 +28,11 @@
     
     
     <hr>
-    
-        <a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+    {% if individual_product.Product_stock <= 0 %}
+    <a class="btn  btn-danger"> <span class="text">Out of stock</span> <i class="fas fa-shopping-cart"></i> </a>
+    {% else %}
+        <a href="{% url 'add_basket' individual_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+    {% endif %}
     </article> <!-- product-info-aside .// -->
             </main> <!-- col.// -->
         </div> <!-- row.// -->
