--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,10 +40,10 @@
         <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
                     <div class="d-flex justify-content-end mb-3 mb-lg-0">
                         <div class="widget-header">
-                            <small class="title text-muted">Welcome guest!</small>
+                            <p>welcome user {{user.username}} </p>    
                             <div> 
-                                <a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-                                <a href="./register.html"> Register</a>
+                                <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
+                                <a href="{% url 'logout' %}"> logout</a>
                             </div>
                         </div>
                         <a href="{% url 'basket' %}" class="widget-header pl-3 ml-3">
